[project]
name = "pyrange"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Dariel Buret", email = "darielburetrivera@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pyrange = "pyrange:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
